--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -33,6 +33,7 @@
 	@import 'components/list';
 	@import 'components/table';
 	@import 'components/button';
+	@import 'components/map';
 
 // Layout.
 
