--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
+@import 'glyphicon.css';
 @import url('https://fonts.googleapis.com/css?family=Lato|Montserrat');
 
 	@include skel-breakpoints((
