--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -490,7 +490,9 @@ input[type="radio"] + label:before {
   .image.main {
     display: block;
     margin: 2.5rem 0;
-    width: 100%; }
+    width: 100%;
+    max-height: 320px;
+    overflow: hidden; }
     .image.main img {
       width: 100%; }
   @media screen and (max-width: 736px) {
@@ -946,6 +948,10 @@ button {
     border-radius: 100%; }
     #header .logo .icon:before {
       font-size: 2rem; }
+    #header .logo img {
+      width: 3.5rem;
+      margin-top: 11px;
+      margin-left: -6px; }
   #header .content {
     border-style: solid;
     border-color: #ffffff;
