--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -53,6 +53,12 @@
 					font-size: 2rem;
 				}
 			}
+			
+			img {
+				width: 3.5rem;
+			    margin-top: 11px;
+			    margin-left: -6px;
+			}
 		}
 
 		.content {
