Create buffers around selected home address corresponding to the address

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -763,9 +763,14 @@ button {
   left: 0;
   float: left;
   width: 25%;
+  overflow-y: scroll;
   height: 100vh;
   padding: 1em 1.5em 1em 1.5em;
   background: #00008B; }
+
+#address-disclaimer {
+  margin-top: 15px;
+  font-size: 14px; }
 
 .option-block h3 {
   letter-spacing: 1px;
